@@ -4,14 +4,23 @@
 /* Copyright (c) 2009 Michal Cihar <michal@cihar.com> */
 /* Licensend under GNU GPL 2 */
 
-#include <signal.h>
 #include <gammu-smsd.h>
 #include <assert.h>
 #include <stdlib.h>
+#include <signal.h>
+#ifndef WIN32
 #include <unistd.h>
+#endif
 #ifdef HAVE_GETOPT_LONG
 #include <getopt.h>
 #endif
+#ifdef WIN32
+#include "service.h"
+#endif
+#ifdef HAVE_KILL
+#include "pidfile.h"
+#endif
+#include "common.h"
 
 #if !defined(WIN32) && (defined(HAVE_GETOPT) || defined(HAVE_GETOPT_LONG))
 #define HAVE_DEFAULT_CONFIG
@@ -35,6 +44,12 @@ void version(void)
 #ifdef HAVE_DAEMON
 	printf("  - %s\n", "DAEMON");
 #endif
+#ifdef HAVE_KILL
+	printf("  - %s\n", "PID");
+#endif
+#ifdef WIN32
+	printf("  - %s\n", "WINDOWS_SERVICE");
+#endif
 #ifdef HAVE_GETOPT
 	printf("  - %s\n", "GETOPT");
 #endif
@@ -50,21 +65,47 @@ void version(void)
     exit(0);
 }
 
-#if defined(HAVE_GETOPT) || defined(HAVE_GETOPT_LONG)
+#ifdef HAVE_GETOPT_LONG
+#define print_option(name, longname, help) \
+    printf("-%s / --%s - %s\n", name, longname, help);
+#define print_option_param(name, longname, paramname, help) \
+    printf("-%s / --%s %s - %s\n", name, longname, paramname, help);
+#else
+#define print_option(name, longname, help) \
+    printf("-%s - %s\n", name, help);
+#define print_option_param(name, longname, paramname, help) \
+    printf("-%s %s - %s\n", name, paramname, help);
+#endif
 
 void help(void)
 {
-    printf("usage: gammu-smsd [-c CONFIG_FILE] [-h] [-d]\n");
+    printf("usage: gammu-smsd [OPTION]...\n");
+    printf("options:\n");
+    print_option("h", "help", "shows this help");
+    print_option("v", "version", "shows version information");
+    print_option_param("c", "config", "CONFIG_FILE", "defines path to config file");
+#ifdef HAVE_KILL
+    print_option("d", "daemon", "daemonizes program after startup");
+#endif
+#ifdef HAVE_KILL
+    print_option_param("p", "pid", "PID_FILE", "defines path to pid file");
+#endif
+#ifdef WIN32
+    print_option("i", "install-service", "installs SMSD as a Windows service");
+    print_option("u", "uninstall-service", "uninstalls SMSD as a Windows service");
+    print_option("s", "start-service", "starts SMSD Windows service");
+#endif
 }
 
 NORETURN
 void wrong_params(void)
 {
-    fprintf(stderr, "Invalid parameter, use --help for help.\n");
+    fprintf(stderr, "Invalid parameter, use -h for help.\n");
     exit(1);
 }
 
-void process_commandline(int argc, char **argv, bool *daemonize, const char **pid_file, const char **config_file)
+
+void process_commandline(int argc, char **argv, SMSD_Parameters *params)
 {
     int opt;
 
@@ -75,23 +116,45 @@ void process_commandline(int argc, char **argv, bool *daemonize, const char **pi
        {"config"    , 1, 0, 'c'},
        {"daemon"    , 0, 0, 'd'},
        {"pid"       , 1, 0, 'p'},
+       {"install-service", 0, 0, 'i'},
+       {"uninstall-service", 0, 0, 'u'},
+       {"start-service", 0, 0, 's'},
        {0           , 0, 0, 0}
     };
     int option_index;
 
-    while ((opt = getopt_long(argc, argv, "h?dc:p:", long_options, &option_index)) != -1) {
+    while ((opt = getopt_long(argc, argv, "hv?dc:p:ius", long_options, &option_index)) != -1) {
+#elif defined(HAVE_GETOPT)
+    while ((opt = getopt(argc, argv, "hv?dc:p:ius")) != -1) {
 #else
-    while ((opt = getopt(argc, argv, "h?dc:p:")) != -1) {
+    /* Poor mans getopt replacement */
+    int i;
+#define optarg argv[++i]
+
+    for (i = 1; i < argc; i++) {
+        if (strlen(argv[i]) != 2 || argv[i][0] != '-') {
+            wrong_params();
+        }
+        opt = argv[i][1];
 #endif
         switch (opt) {
             case 'c':
-                *config_file = optarg;
+                params->config_file = optarg;
                 break;
             case 'p':
-                *pid_file = optarg;
+                params->pid_file = optarg;
                 break;
             case 'd':
-                *daemonize = true;
+                params->daemonize = true;
+                break;
+            case 'i':
+                params->install_service = true;
+                break;
+            case 'u':
+                params->uninstall_service = true;
+                break;
+            case 's':
+                params->start_service = true;
                 break;
             case 'v':
                 version();
@@ -106,89 +169,48 @@ void process_commandline(int argc, char **argv, bool *daemonize, const char **pi
         }
     }
 
+#if defined(HAVE_GETOPT) || defined(HAVE_GETOPT_LONG)
     if (optind < argc) {
         wrong_params();
     }
-
-}
-
-#else
-void help(void)
-{
-    printf("usage: gammu-smsd CONFIG_FILE\n");
-}
-
-void process_commandline(int argc, char **argv, bool *daemonize, char **pid_file, char **config_file)
-{
-    if (argc != 2) {
-        help();
-        exit(1);
-    }
-
-    /* FIXME: This is cruel hack */
-    config_file = argv[1];
-}
-
 #endif
 
+}
+
 #ifndef WIN32
-/**
- * Check existing PID file if it points to existing application.
- */
-void check_pid(const char *pid_file)
-{
-    FILE        *file;
-    int         other;
-
-    file = fopen(pid_file, "r");
-    if (file != NULL) {
-        if (fscanf(file, "%d", &other) == 1) {
-            if (kill(other, 0) == 0) {
-                fprintf(stderr, "Another instance is running, please stop it first!\n");
-                exit(10);
-            } else {
-                fprintf(stderr, "Stale lock file, ignoring!\n");
-            }
-        } else {
-            fprintf(stderr, "Can not parse pidfile, ignoring!\n");
-        }
-        fclose(file);
-    }
-}
-
-
-/**
- * Write pid file.
- */
-void write_pid(const char *pid_file) {
-    FILE        *file;
-
-    file = fopen(pid_file, "w");
-    if (file != NULL) {
-        fprintf(file, "%d\n", getpid());
-        fclose(file);
-    } else {
-        fprintf(stderr, "Can not create pidfile!\n");
-        exit(1);
-    }
-}
 #endif
 
 int main(int argc, char **argv)
 {
 	GSM_Error error;
-	const char *config_file = NULL;
-	const char *pid_file = NULL;
-    bool daemonize = false;
+    SMSD_Parameters params = {
+        NULL,
+        NULL,
+        false,
+        false,
+        false,
+        false};
 
 	config = SMSD_NewConfig();
 	assert(config != NULL);
 
-    process_commandline(argc, argv, &daemonize, &pid_file, &config_file);
+    process_commandline(argc, argv, &params);
 
-    if (config_file == NULL) {
+#ifdef WIN32
+    if (params.uninstall_service) {
+        if (uninstall_smsd_service()) {
+            printf("Service %s uninstalled sucessfully\n", smsd_service_name);
+            exit(0);
+        } else {
+            printf("Error uninstalling %s service\n", smsd_service_name);
+            exit(1);
+        }
+    }
+#endif
+
+    if (params.config_file == NULL) {
 #ifdef HAVE_DEFAULT_CONFIG
-        config_file = default_config;
+        params.config_file = default_config;
 #else
         fprintf(stderr, "No config file specified!\n");
         help();
@@ -196,7 +218,19 @@ int main(int argc, char **argv)
 #endif
     }
 
-	error = SMSD_ReadConfig(config_file, config, true, NULL);
+#if WIN32
+    if (params.install_service) {
+        if (install_smsd_service(&params)) {
+            printf("Service %s installed sucessfully\n", smsd_service_name);
+            exit(0);
+        } else {
+            printf("Error installing %s service\n", smsd_service_name);
+            exit(1);
+        }
+    }
+#endif
+
+	error = SMSD_ReadConfig(params.config_file, config, true, NULL);
 	if (error != ERR_NONE) {
 		SMSD_Terminate(config, "Failed to read config", error, true, 2);
 	}
@@ -204,14 +238,14 @@ int main(int argc, char **argv)
 	signal(SIGINT, smsd_interrupt);
 	signal(SIGTERM, smsd_interrupt);
 
-#ifndef WIN32
-    if (pid_file != NULL && strlen(pid_file) > 0) {
-        check_pid(pid_file);
-        write_pid(pid_file);
+#ifdef HAVE_KILL
+    if (params.pid_file != NULL && strlen(params.pid_file) > 0) {
+        check_pid(params.pid_file);
+        write_pid(params.pid_file);
     }
 #endif
 
-    if (daemonize) {
+    if (params.daemonize) {
 #ifdef HAVE_DAEMON
         daemon(1, 0);
 #else
@@ -219,6 +253,16 @@ int main(int argc, char **argv)
         exit(1);
 #endif
     }
+
+#if WIN32
+    if (params.start_service) {
+        start_smsd_service_dispatcher();
+
+        SMSD_FreeConfig(config);
+
+        exit(0);
+    }
+#endif
 
 	error = SMSD_MainLoop(config);
 	if (error != ERR_NONE) {
